specifying unknown parameter doesn't give helpful error message
On cmake 3.19.0 I used mistyped argument --presets=
instead of --preset=
:
cmake ~/src/va/ui/android --presets=asdf
CMake Error: The source directory "/home1/mateuszl/bld/va-and/--presets=asdf" does not exist.
Specify --help for usage, or press the help button on the CMake GUI.
Then
cmake --presets=asdf ~/src/va/ui/android
did run cmake with default arguments silently ignoring given param.
I think cmake:
- shouldn't run configuration and
- should complain "unknown argument --presets=asdf. Use cmake --help to see valig parameters"