cmake: Error out on unknown arguments starting with `-`.

Fixes: #21521